# inspect_explorer

./: .gitignore  README.md  assistant.ipynb  explore.ipynb  explore_eval_results.ipynb  grade_ethics_of_responses.ipynb  multiple_time_ordered_objectives.py  pyproject.toml
docs/: inspect_ai_cheat_sheet.md
inspect_explorer/: conversation_manager.py  logging_utils.py  model_ids.py  tokenization.py
inspect_explorer/affordances/: aider_cli.py  raw_bash_execution.py  summarize_text.py
inspect_explorer/in_context_memory/: __init__.py  context_window_usage.py  initial_explanation.py
inspect_explorer/in_context_tool_use/: __init__.py  function_call_manager.py  initial_explanation.py  parsing.py  tool_use_types.py
inspect_explorer/multiple_time_ordered_objectives/: run.py
inspect_explorer/multiple_time_ordered_objectives/prompts/: 2024-09-30_12:16_PM__furry_tireless_kingfisher_from_arcadia__5fd920bee96a0d30b527ffb8607c78ad3135d92fd9522c47eb25d3b06d61d842.txt
notes/: competing-objectives-examples.md  meta-prompt-competing-objectives.md  multiple-time-ordered-objectives.md
tests/: test_aider_cli.py  test_conversation_manager.py  test_in_context_tool_use.py  test_raw_bash_execution.py
